# structured-programming-project-soufiane

Assignment 1/: Body Mass Index Calculator.cpp  CMakeLists.txt  Currency Conversion.cpp  Distance Conversion.cpp  Fuel Efficiency Calculator.cpp  Loan Payment Calculator.cpp  Temperature Conversion.cpp  Time Conversion.cpp  Volume and Surface Area of a Cylinder.cpp
Assignment_2/: Age Group Classification.cpp  BMI Category.cpp  CMakeLists.txt  Discount Eligibility.cpp  Grade Calculator.cpp  Grade Classification.cpp  Leap Year Checker.cpp  Menu-Driven Calculator.cpp  Voting Eligibility.cpp
Assignment_3/: CMakeLists.txt  Multiples of a Number.cpp  Multiplication Table Generator.cpp  Number Guessing Game.cpp  Password Validator.cpp  Reverse a String.cpp  Square and Cube of Numbers.cpp  Sum and Average Calculator.cpp
Assignment_4/: CMakeLists.txt  Digital Clock Simulation.cpp  Expense Tracker.cpp  Password Strength Checker.cpp  Personal Diary Application.cpp  Simple Banking System.cpp
Assignment_5/:  Student Performance Analysis.cpp  CMakeLists.txt  Game Scoreboard.cpp  Inventory Management System with Sales Tracking.cpp  Seating Arrangement.cpp
Assignment_6/: CMakeLists.txt  Dynamic Array Resizing.cpp  Dynamic Array of Pointers.cpp  Dynamic Matrix Multiplication.cpp  Dynamic String Manipulation.cpp  Pointer-based Linked List Operations.cpp
Tasks_S2_ALGORITHMS/: CMakeLists.txt  Task1.cpp  Task10.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
