cmake_minimum_required(VERSION 3.29)
project(Assignment_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_1
        //"Fuel Efficiency Calculator.cpp"//
        //"Body Mass Index Calculator.cpp"//
        //"Temperature Conversion.cpp"//
       //"Distance Conversion.cpp"//
        //"Time Conversion.cpp"//
        //"Loan Payment Calculator.cpp"//
        //"Volume and Surface Area of a Cylinder.cpp"//
        //"Currency Conversion.cpp"//)
