cmake_minimum_required(VERSION 3.29)
project(Assignment_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_2 //"Grade Classification.cpp"//
        //"Leap Year Checker.cpp"//
        //"Age Group Classification.cpp"//
        //"Menu-Driven Calculator.cpp"//
        //"BMI Category.cpp"//
        //"Discount Eligibility.cpp"//
        //"Voting Eligibility.cpp"//
        //"Grade Calculator.cpp"//

)
