cmake_minimum_required(VERSION 3.29)
project(Assignment_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_3 //"Multiplication Table Generator.cpp"//
        //"Square and Cube of Numbers.cpp"//
        //"Multiples of a Number.cpp"//
        //"Number Guessing Game.cpp"//
        //"Password Validator.cpp"//
        //"Reverse a String.cpp"//
        //"Sum and Average Calculator.cpp"//)
