cmake_minimum_required(VERSION 3.29)
project(Assignment_4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_4 //"Digital Clock Simulation.cpp"//
        //"Personal Diary Application.cpp"//
        //"Password Strength Checker.cpp"//
        //"Expense Tracker.cpp"//
       //"Simple Banking System.cpp"// )
