cmake_minimum_required(VERSION 3.29)
project(Assignment_6)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment_6 //"Dynamic String Manipulation.cpp"//
        //"Dynamic Array of Pointers.cpp"//
        //"Dynamic Matrix Multiplication.cpp"//
        //"Dynamic Array Resizing.cpp"//
        "Pointer-based Linked List Operations.cpp")
