cmake_minimum_required(VERSION 3.29)
project(Task1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1 Task1.cpp//
        Task2.cpp//
        Task3.cpp//
        Task4.cpp//
        Task5.cpp//
        Task6.cpp//
        Task7.cpp//
        Task8.cpp//
        Task9.cpp//
        Task10.cpp//
        PROJECT.cpp
        PROJ.cpp
)
